--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,12 @@
 .App {
   text-align: center;
 }
+
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
